syntax = "proto3";
package ethereum.validator.accounts.v2;

import "eth/v1alpha1/attestation.proto";
import "eth/v1alpha1/beacon_block.proto";
import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

service Wallet {
    rpc CreateWallet(CreateWalletRequest) returns (WalletResponse) {
        option (google.api.http) = {
            post: "/v2/validator/wallet/create"
        };
    }
    rpc EditConfig(EditWalletConfigRequest) returns (WalletResponse) {
        option (google.api.http) = {
            post: "/v2/validator/wallet/config/edit"
        };
    }
    rpc WalletConfig(google.protobuf.Empty) returns (WalletResponse) {
        option (google.api.http) = {
            get: "/v2/validator/wallet/config"
        };
    }
}

service Accounts {
    rpc CreateAccount(google.protobuf.Empty) returns (CreateAccountResponse) {
        option (google.api.http) = {
            post: "/v2/validator/accounts/create"
        };
    }
    rpc ListAccounts(ListAccountsRequest) returns (ListAccountsResponse) {
        option (google.api.http) = {
            get: "/v2/validator/accounts"
        };
    }
}

service Health {
    rpc ListBalances(AccountRequest) returns (ListBalancesResponse) {
        option (google.api.http) = {
            post: "/v2/validator/balances"
        };
    }
    rpc ListStatuses(AccountRequest) returns (ListStatusesResponse) {
        option (google.api.http) = {
            post: "/v2/validator/statuses"
        };
    }
    rpc ListPerformance(AccountRequest) returns (ListPerformanceResponse) {
        option (google.api.http) = {
            post: "/v2/validator/performances"
        };
    }
}

message CreateWalletRequest {
    // Path on disk where the wallet will be stored.
    string wallet_path = 1;
    // Type of key manager for the wallet, either direct, derived, or remote.
    enum KeyManagerKind {
        UNKNOWN = 0;
        direct = 1;
        derived = 2;
        remote = 3;
    }
    KeyManagerKind key_manager = 2;
    // Password for the wallet.
    string wallet_password = 3;
    // Remote address such as host.example.com:4000 for a gRPC remote signer server.
    string remote_addr = 4;
    // Path to client.crt for secure TLS connections to a remote signer server.
    string remote_crt_path = 5;
    // Path to client.key for secure TLS connections to a remote signer server.
    string remote_key_path = 6;
    // Path to ca.crt for secure TLS connections to a remote signer server.
    string remote_ca_crt_path = 7;
}

message WalletResponse {
    string wallet_path = 1;

    // Key manager configs, this is meant to be some what generic.
    // It'll later be encoded with json to represent in front end UI.
    message KeyManagerConfigs {
        map<string, string> configs = 1;
    }
    KeyManagerConfigs key_manager_configs = 2;
}

message EditWalletConfigRequest {
    string remote_addr = 1;
    string remote_crt_path = 2;
    string remote_key_path = 3;
    string remote_ca_crt_path = 4;
}

message CreateAccountResponse {
    // Account configs, this is meant to be some what generic.
    // It'll later be encoded with json to represent in front end UI.
    message AccountConfigs {
        map<string, string> configs = 1;
    }
    AccountConfigs account_configs = 2;
}

message ListAccountsRequest {
    // Whether or not to return the raw RLP deposit tx data.
    bool get_deposit_tx = 1;
}

message ListAccountsResponse {
    // List of human readable account names.
    repeated string account_names = 1;
    // List of public validating keys.
    repeated bytes validating_public_keys = 2;
}

message AccountRequest {
    // A list of validator public keys.
    repeated bytes public_keys = 1;
    // A list of validator indices.
    repeated int64 indices = 2;
}

message ListBalancesResponse {
    // A list of validator public keys.
    repeated bytes public_keys = 1;
    // A list of validator indices.
    repeated uint64 indices = 2;
    // A list of validator balances that maps to public keys and indices.
    repeated uint64 balances = 3;
}

message ListStatusesResponse {
    // A list of validator public keys.
    repeated bytes public_keys = 1;
    // A list of validator indices.
    repeated uint64 indices = 2;
    // A list of validator statuses that maps to public keys and indices.
    enum ValidatorStatus {
        UNKNOWN_STATUS = 0;
        DEPOSITED = 1;
        PENDING = 2;
        ACTIVE = 3;
        EXITING = 4;
        SLASHING = 5;
        EXITED = 6;
        INVALID = 7;
    }
    repeated ValidatorStatus statuses = 3;
}

message ListPerformanceResponse {
    // A list of validator public keys.
    repeated bytes public_keys = 1;
    // A list of validator indices.
    repeated uint64 indices = 2;
    // A list of block / attestation submission count since last launch.
    message Submission {
        uint64 block_count = 1;
        uint64 attestation_count = 2;
    }
    repeated Submission submissions = 3;
}
